# WhistleClipboard

./: QUICKSTART.md  README.md  main.py  pyproject.toml  run.sh  setup.py
docs/: ARCHITECTURE.md  ROADMAP.md  TUNING.md
voiceclipboard/: __init__.py  actions.py  audio.py  config.py  detector.py  features.py  learning.py  main.py  model.py
voiceclipboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
whistleclipboard/: __init__.py  audio.py  config.py  detector.py  learning.py  main.py  model.py
whistleclipboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
