[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceclipboard"
version = "0.1.0"
description = "Learnable microphone-driven clipboard shortcuts."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.26",
  "sounddevice>=0.4.6",
]

[project.scripts]
voiceclipboard = "voiceclipboard.main:main"
